HTML Update with New JS

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 </div>
 
                 <div class="hero-image">
+                    <img src="./images/gemini robotics.png" alt="gemini-2.5-flash-image">
                     <div class="hero-image-chip">
                         <p class="hero-img-chips">INPUT</p>
                         <p class="hero-img-chips">OUTPUT</p>
@@ -728,5 +729,6 @@
 
     </div>
 
+    <script src="script.js"></script>
 </body>
 </html>
