Hero Section Done, Start of Start Bbuilding Section

--- a/index.html
+++ b/index.html
@@ -74,11 +74,16 @@
                 </div>
 
                 <div class="hero-image">
-                    <img src="./images/gemini robotics.png" alt="gemini-2.5-flash-image">
-                    <div class="hero-image-chip">
+                    <gdm-video-embed class="gdm-video-embed gdm-video-embed--muted gdm-video-embed--fit-height gdm-video-embed--has-played" data-autoplay="true">
+                        <video class="gdm-video-embed__player" muted playsinline loop width="800" height="800" poster="https://lh3.googleusercontent.com/e_AMuD8aFZZjcFPIYTPcXtFZUll9fpAqM7hDQ9OhUMTPevXlBWg-uHcWrhalTny96cY5_VrD8JDbNLtwHNEGuu6RwiPGeT7E7bJcZAcQqDUTg--ZeQ=w500-rw" autoplay>
+                            <source src="/api/blob/website/media/home__news__gemini-image.mp4" type="video/mp4">
+                        </video>
+                    </gdm-video-embed>
+
+                    <!-- <div class="hero-image-chip">
                         <p class="hero-img-chips">INPUT</p>
                         <p class="hero-img-chips">OUTPUT</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
@@ -104,7 +109,7 @@
 
                 <div class="hero-blog-card">
                     <div class="hero-blog-card-left">
-                        <h2>Genie:3 A new frontier for world models</h2>
+                        <h2>Rethinking how we measure AI intelligence</h2>
                         <div class="hero-chips">
                             <p class=".hero-chip-text">August 2025</p>
                             <p class=".hero-chip-text">Models</p>
@@ -116,13 +121,13 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/unnamed.webp" alt="blog image">
+                        <img src="./images/thinking img.webp" alt="blog image">
                     </div>
                 </div>
 
                 <div class="hero-blog-card">
                     <div class="hero-blog-card-left">
-                        <h2>Genie:3 A new frontier for world models</h2>
+                        <h2>Try Deep Think in the Gemini app</h2>
                         <div class="hero-chips">
                             <p class=".hero-chip-text">August 2025</p>
                             <p class=".hero-chip-text">Models</p>
@@ -134,13 +139,13 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/unnamed.webp" alt="blog image">
+                        <img src="./images/deep-think__key-art_16-9.width-1300.jpg" alt="blog image">
                     </div>
                 </div>
 
                 <div class="hero-blog-card">
                     <div class="hero-blog-card-left">
-                        <h2>Genie:3 A new frontier for world models</h2>
+                        <h2>AlphaEarth Foundations helps map our planet in unprecedented detail</h2>
                         <div class="hero-chips">
                             <p class=".hero-chip-text">August 2025</p>
                             <p class=".hero-chip-text">Models</p>
@@ -152,13 +157,13 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/unnamed.webp" alt="blog image">
+                        <img src="./images/Alpha earth.webp" alt="blog image">
                     </div>
                 </div>
 
                 <div class="hero-blog-card">
                     <div class="hero-blog-card-left">
-                        <h2>Genie:3 A new frontier for world models</h2>
+                        <h2>Aeneas transforms how historians connect the past</h2>
                         <div class="hero-chips">
                             <p class=".hero-chip-text">August 2025</p>
                             <p class=".hero-chip-text">Models</p>
@@ -170,13 +175,13 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/unnamed.webp" alt="blog image">
+                        <img src="./images/Aeneas 2.webp" alt="blog image">
                     </div>
                 </div>
 
                 <div class="hero-blog-card">
                     <div class="hero-blog-card-left">
-                        <h2>Genie:3 A new frontier for world models</h2>
+                        <h2>Gemini 2.5 Flash-Lite is now ready for scaled production use</h2>
                         <div class="hero-chips">
                             <p class=".hero-chip-text">August 2025</p>
                             <p class=".hero-chip-text">Models</p>
@@ -188,13 +193,13 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/unnamed.webp" alt="blog image">
+                        <img src="./images/flashlight.webp" alt="blog image">
                     </div>
                 </div>
 
                 <div class="hero-blog-card">
                     <div class="hero-blog-card-left">
-                        <h2>Genie:3 A new frontier for world models</h2>
+                        <h2>Advanced version of Gemini with Deep Think officially achieves gold-medal standard at the International Mathematical Olympiad</h2>
                         <div class="hero-chips">
                             <p class=".hero-chip-text">August 2025</p>
                             <p class=".hero-chip-text">Models</p>
@@ -206,13 +211,13 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/unnamed.webp" alt="blog image">
+                        <img src="./images/advance version .webp" alt="blog image">
                     </div>
                 </div>
 
                 <div class="hero-blog-card">
                     <div class="hero-blog-card-left">
-                        <h2>Genie:3 A new frontier for world models</h2>
+                        <h2>AlphaGenome: AI for better understanding the genome</h2>
                         <div class="hero-chips">
                             <p class=".hero-chip-text">August 2025</p>
                             <p class=".hero-chip-text">Models</p>
@@ -224,13 +229,13 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/unnamed.webp" alt="blog image">
+                        <img src="./images/Alphagenome.webp" alt="blog image">
                     </div>
                 </div>
 
                 <div class="hero-blog-card">
                     <div class="hero-blog-card-left">
-                        <h2>Genie:3 A new frontier for world models</h2>
+                        <h2>Gemini Robotics On-Device brings AI to local robotic devices</h2>
                         <div class="hero-chips">
                             <p class=".hero-chip-text">August 2025</p>
                             <p class=".hero-chip-text">Models</p>
@@ -242,13 +247,13 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/unnamed.webp" alt="blog image">
+                        <img src="./images/gemini robotics.png" alt="blog image">
                     </div>
                 </div>
 
                 <div class="hero-blog-card">
                     <div class="hero-blog-card-left">
-                        <h2>Genie:3 A new frontier for world models</h2>
+                        <h2>Gemini 2.5 Flash-Lite is here, and 2.5 Pro and Flash are now stable and generally available</h2>
                         <div class="hero-chips">
                             <p class=".hero-chip-text">August 2025</p>
                             <p class=".hero-chip-text">Models</p>
@@ -260,13 +265,13 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/unnamed.webp" alt="blog image">
+                        <img src="./images/flashlite 2.webp" alt="blog image">
                     </div>
                 </div>
 
                 <div class="hero-blog-card">
                     <div class="hero-blog-card-left">
-                        <h2>Genie:3 A new frontier for world models</h2>
+                        <h2>Advanced audio dialog and generation with Gemini 2.5</h2>
                         <div class="hero-chips">
                             <p class=".hero-chip-text">August 2025</p>
                             <p class=".hero-chip-text">Models</p>
@@ -278,13 +283,13 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/unnamed.webp" alt="blog image">
+                        <img src="./images/capability__native-audio_16-9_121.jpg" alt="blog image">
                     </div>
                 </div>
 
-                <div class="hero-blog-card">
+                <div class="hero-blog-card last-card">
                     <div class="hero-blog-card-left">
-                        <h2>Genie:3 A new frontier for world models</h2>
+                        <h2>Veo 3 our new state-of-the-art video generation model</h2>
                         <div class="hero-chips">
                             <p class=".hero-chip-text">August 2025</p>
                             <p class=".hero-chip-text">Models</p>
@@ -296,7 +301,7 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/unnamed.webp" alt="blog image">
+                        <img src="./images/Veo 3.gif" alt="blog image">
                     </div>
                 </div>
 
