--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                         <p class="footer-form-summary">I accept Google's Terms and Conditions and acknowledge that my information will be used in accordance with <span class="privacy">Google's Privacy Policy</span></p>
 
                         <div class="input-field">
-                            <input type="email" placeholder="Email address" required>
+                            <input type="email" class="email" placeholder="Email address" required>
                             <span class="material-icons">keyboard_arrow_right</span>
                         </div>
                     </form>
@@ -734,7 +734,7 @@
 
             <div class="footer-bottom">
                 <div class="buttom-logo">
-
+                    <img src="./images/logos/Google Logo white 1.svg" alt="google logo">
                 </div>
 
                 <div class="buttom-links">
