--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                         </video>
                     </gdm-video-embed>
 
-                    <!-- <div class="hero-image-chip">
+                    <div class="hero-image-chip">
                         <p class="hero-img-chips">INPUT</p>
                         <p class="hero-img-chips">OUTPUT</p>
-                    </div> -->
+                    </div>
                 </div>
             </div>
 
