--- a/index.html
+++ b/index.html
@@ -36,6 +36,26 @@
                     <a href="#About">About</a>
                 </div>
 
+
+                <!-- ...Mobile .nav-bar... -->
+                <div class="mobile-logo">
+                    <div class="mobile-logo-image">
+                        <img src="./images/logos/deepmind-text 1.svg" alt="deepmind-logo">
+                    </div>
+                </div>
+                
+                <button class="mobile-nav-toggle" id="mobileNavToggle">
+                    <span class="material-icons">menu</span>
+                </button>
+
+                <nav class="mobile-nav-menu hide" id="mobileNavMenu">
+                    <a href="#">Home</a>
+                    <a href="#">Models</a>
+                    <a href="#">Research</a>
+                    <a href="#">Try in Gemini</a>
+                </nav>
+
+
             </div>
 
             <div class="nav-buttons">
