--- a/index.html
+++ b/index.html
@@ -37,25 +37,6 @@
                 </div>
 
 
-                <!-- ...Mobile .nav-bar... -->
-                <div class="mobile-logo">
-                    <div class="mobile-logo-image">
-                        <img src="./images/logos/deepmind-text 1.svg" alt="deepmind-logo">
-                    </div>
-                </div>
-                
-                <button class="mobile-nav-toggle" id="mobileNavToggle">
-                    <span class="material-icons">menu</span>
-                </button>
-
-                <nav class="mobile-nav-menu hide" id="mobileNavMenu">
-                    <a href="#">Home</a>
-                    <a href="#">Models</a>
-                    <a href="#">Research</a>
-                    <a href="#">Try in Gemini</a>
-                </nav>
-
-
             </div>
 
             <div class="nav-buttons">
@@ -71,6 +52,16 @@
 
                 <div class="search-icon">
                     <span class="material-icons">search</span>
+                </div>
+            </div>
+
+            <div class="mobile-nav-wrapper">
+                <div class="mobile-logo">
+                    <img src="./images/logos/deepmind-text 1.svg" alt="deepmind-logo">
+                </div>
+
+                <div class="mobile-nav-toggle">
+                    <span class="material-icons">menu</span>
                 </div>
             </div>
 
