Added Icon to the tab

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google DeepMind</title>
+    <title>Google DeepMind - Ironali</title>
+    <!-- Google Logo in Tab -->
+     <link rel="icon" type="image/svg+xml" href="./images/logos/deepmind-color.svg">
     <!-- Google Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Google Sans Flex font -->
