--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Flex:wght@400;700&display=swap" rel="stylesheet">
     <!-- Link to styles.css -->
     <link rel="stylesheet" href="styles.css">
+    <meta property="og:image" content="images/gemini robotics.png">
 </head>
 <body>
     
