--- a/index.html
+++ b/index.html
@@ -89,11 +89,7 @@
                 </div>
 
                 <div class="hero-image">
-                    <gdm-video-embed class="gdm-video-embed gdm-video-embed--muted gdm-video-embed--fit-height gdm-video-embed--has-                    played" data-autoplay="true">
-                        <video class="gdm-video-embed__player" muted playsinline loop width="800" height="800" 
-                        poster="https://lh3.googleusercontent.com/e_AMuD8aFZZjcFPIYTPcXtFZUll9fpAqM7hDQ9OhUMTPevXlBWg-uHcWrhalTny96cY5_VrD8JDbNLtwHNEGuu6RwiPGeT7E7bJcZAcQqDUTg--ZeQ=w500-rw" autoplay>
-                            <source src="/api/blob/website/media/home__news__gemini-image.mp4" type="video/mp4">
-                        </video>
+                    <video class="main_video" autoplay="" muted="" loop="" src="./images/videos/main_video.mp4" type="video/mp4"></video>
                     </gdm-video-embed>
 
                     <div class="hero-image-chip">
@@ -155,7 +151,7 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/deep-think__key-art_16-9.width-1300.jpg" alt="blog image">
+                        <video autoplay="" muted="" loop="" src="./images/videos/deep_think.mp4" type="video/mp4"></video>
                     </div>
                 </div>
 
@@ -191,7 +187,7 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/Aeneas 2.webp" alt="blog image">
+                        <video autoplay="" muted="" loop="" src="./images/videos/aeneas.mp4" type="video/mp4"></video>
                     </div>
                 </div>
 
@@ -209,7 +205,7 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/flashlight.webp" alt="blog image">
+                        <video autoplay="" muted="" loop="" src="./images/videos/flash_lite.mp4" type="video/mp4"></video>
                     </div>
                 </div>
 
@@ -263,7 +259,7 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/gemini robotics.png" alt="blog image">
+                        <video autoplay="" muted="" loop="" src="./images/videos/robotics.mp4" type="video/mp4"></video>
                     </div>
                 </div>
 
@@ -281,7 +277,7 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/flashlite 2.webp" alt="blog image">
+                        <video autoplay="" muted="" loop="" src="./images/videos/advanced_audio.mp4" type="video/mp4"></video>
                     </div>
                 </div>
 
@@ -317,7 +313,7 @@
                     </div>
 
                     <div class="hero-blog-card-right">
-                        <img src="./images/Veo 3.gif" alt="blog image">
+                        <video autoplay="" muted="" loop="" src="./images/videos/ai_film.mp4" type="video/mp4"></video>
                     </div>
                 </div>
 
