--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                     <video class="main_video" autoplay="" muted="" loop="" src="./images/videos/main_video.mp4" type="video/mp4"></video>
                     </gdm-video-embed>
 
-                    <div class="hero-image-chip">
+                    <!-- <div class="hero-image-chip">
                         <p class="hero-img-chips">INPUT</p>
                         <p class="hero-img-chips">OUTPUT</p>
-                    </div>
+                    </div> -->
                     
                 </div>
             </div>
